# -ECE4310-Service-Robot-

./: README.md
demo/: pre.pptx
src/ar_track/ar_track_alvar/: .cmake-format.yaml  .pre-commit-config.yaml
src/ar_track/ar_track_alvar/ar_track_alvar/: CMakeLists.txt  ar_track.rviz  package.xml
src/ar_track/ar_track_alvar/ar_track_alvar/launch/: ar_track_camera.launch  ar_track_depth.launch
src/ar_track/ar_track_alvar/ar_track_alvar/nodes/: IndividualMarkers.cpp  IndividualMarkersNoKinect.cpp
src/ar_track/common_msg/: CMakeLists.txt  package.xml
src/ar_track/common_msg/msg/: Detect.msg  Marker.msg
src/spark1_description/: CMakeLists.txt  README.txt  package.xml
src/spark1_description/config/: motion.yaml
src/spark1_description/launch/: pointcloud2scan.launch  spark_gazebo.launch  spark_gazebo_easy.launch  spark_gazebo_rviz.launch  spark_gazebo_rviz_real.launch  spark_hector.launch  spark_hector_slam_gazebo_rviz.launch  spark_map_load.launch  spark_rtab_slam_gazebo_rviz.launch  spark_rtab_slam_proj1.launch
src/spark1_description/meshes/: LED_Link.STL  camera_Link.STL  central_controller_Link.STL  front_wheel_Link.STL  left_wheel_link.STL  lidar_Link.STL  rear_wheel_Link.STL  right_wheel_link.STL
src/spark1_description/model/RA317/: model.config  model.sdf
src/spark1_description/model/door/: model.sdf
src/spark1_description/model/house/: model.config  model.sdf
src/spark1_description/model/marker1/: model.config  model.sdf
src/spark1_description/model/marker2/: model.config  model.sdf
src/spark1_description/model/marker4/: model.config  model.sdf
src/spark1_description/model/marker5/: model.config  model.sdf
src/spark1_description/model/marker7/: model.config  model.sdf
src/spark1_description/model/marker8/: model.config  model.sdf
src/spark1_description/model/turtlebot/: model.sdf
src/spark1_description/rviz/: gr.rviz
src/spark1_description/src/: move_pub.cpp  parameter_config.cpp  service_robot.cpp  status.txt
src/spark1_description/urdf/: spark1_description(camera).urdf  spark1_description(depth).urdf  spark1_description.csv  spark1_description.urdf  spark1_description_cartographer.urdf  spark1_description_gmapping.urdf  spark1_description_rtabmap.urdf  spark_with_uarm.urdf
src/spark1_description/worlds/: world.world  world_easy.world
src/spark_navigation/launch/: cartographer_2d_amcl.launch  move_base.launch  move_base_mapless_demo.launch
src/spark_navigation/rviz/: amcl_cartographer.rviz
src/spark_rtabmap/launch/: spark_mapping_astrapro.launch
src/spark_rtabmap/scripts/: project1.pgm
src/spark_teleop/: CMakeLists.txt
src/spark_teleop/src/: teleop_node.cpp
